package.json 수정

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://glenn-a810/github.io/ToDo-List",
+  "homepage": "http://glenn-a810.github.io/ToDo-List",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
